--- a/application/src/view/login/login_view.hbs
+++ b/application/src/view/login/login_view.hbs
@@ -25,7 +25,7 @@
               </div>
               <div class="form-group centrado">
                 <p>
-                    Crear cuenta&nbsp;<a href="#" class="badge badge-success">¡Aquí!</a>
+                    Crear cuenta&nbsp;<a href="/crear-cuenta" class="badge badge-success">¡Aquí!</a>
                     ¿Olvido su contraseña?&nbsp;<a href="#" class="badge badge-warning">¡Click aquí!</a>
                 </p>
               </div>
