--- a/application/src/assets/css/addfooter.css
+++ b/application/src/assets/css/addfooter.css
@@ -2,3 +2,5 @@ footer{
   background-color: black;
   height: 175px;
 }
+.color-nav{ background-color: #95A5A6; }
+.color-content{ background-color: #BDC3C7; }
