--- a/application/src/view/templates/template_base.hbs
+++ b/application/src/view/templates/template_base.hbs
@@ -13,50 +13,51 @@
   <body>
     {{{ body }}}
     <!--Loads of JS -->
-    <div class="container">
-      <footer class="fixed-bottom">
-          <div class="row align-items-center justify-content-center">
-                <div class="col col-lg-2"></div>
-                <div class="col-md-auto">
-                  <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Home</a></li>
-                    <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Misión</a></li>
-                    <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Visión</a></li>
-                    <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Valores</a></li>
-                    <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Terminos y condiciones</a></li>
-                  </ul>
-                </div>
-                <div class="col col-lg-2"></div>
-          </div><
-          <div class="row align-items-center justify-content-center">
-              <div class="col col-lg-2"></div>
-              <div class="col-md-auto">
-                <ul class="list-inline">
-                  <li class="list-inline-item"> <a href="#"> <img alt="Hola" class="img-fluid" src="/img/facebook.png"></a> </li>
-                  <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/instagram.png"> </a> </li>
-                  <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/youtube.png"> </a> </li>
-                  <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/linkedin.png"> </a> </li>
-                  <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/twitter.png"> </a> </li>
-                </ul>
-              </div>
-              <div class="col col-lg-2"></div>
-          </div>
-          <div class="row align-items-center justify-content-center">
-            <div class="col col-lg-2"></div>
-            <div class="col-md-auto">
-              <address>
-                Carr. El verde san Martin de las Flores 480, Col. San Martin de las Flores, Tlaquepaque, Jalisco México C.P.45620
-              </address>
+    <footer class="footer">
+      <div class="container-fluid">
+        <!-- First column -->
+        <div class="row">
+            <div class="col">
+              <h5 class="title">Intranet</h5>
+              <p>Bienvenido a la red interna de la empresa</p>
             </div>
-            <div class="col col-lg-2"></div>
+
+          <!-- ./firt column-->
+          <!-- Second column-->
+          <div class="col">
+            <h5>Links</h5>
+            <ul class="list-inline">
+              <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Home</a></li>
+              <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Misión</a></li>
+              <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Visión</a></li>
+              <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Valores</a></li>
+              <li class="list-inline-item"><a href="#" class="badge badge-pill badge-light">Terminos y condiciones</a></li>
+            </ul>
           </div>
-          <div class="row align-items-center justify-content-center">
-            <div class="col col-lg-2"></div>
-            <div class="col-md-auto">&copy; Ferretería Indar S.A. De C.V</div>
-            <div class="col col-lg-2"></div>
+          <!-- ./Second column-->
+          <!--Third column-->
+          <div class="col">
+            <h5>Redes sociales</h5>
+            <ul class="list-inline">
+              <li class="list-inline-item"> <a href="#"> <img alt="Hola" class="img-fluid" src="/img/facebook.png"></a> </li>
+              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/instagram.png"> </a> </li>
+              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/youtube.png"> </a> </li>
+              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/linkedin.png"> </a> </li>
+              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/twitter.png"> </a> </li>
+            </ul>
           </div>
-      </footer>
-    </div>
+          <!-- ./third column-->
+        </div>
+        <div class="row">
+          <div class="col">
+            <address>
+              Carr. El verde san Martin de las Flores 480, Col. San Martin de las Flores, Tlaquepaque, Jalisco México C.P.45620
+            </address>
+          </div>
+          <div class="col"> &copy;2018 Ferretería Indar S.A. De C.V </div>
+        </div>
+      </div>
+    </footer>
     <script src="/js/jquery-3.2.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
