--- a/application/src/view/addUser/addingUser.hbs
+++ b/application/src/view/addUser/addingUser.hbs
@@ -1,77 +1,152 @@
 <div class="container-fluid">
   <div class="row align-items-center justify-content-center">
-    <div class="col col-lg-2"></div>
+    <div class="col"></div>
     <div class="col-md-auto">
       <h3>
         <span class="alert alert-warning">Recuerde</span>
         <small class="text-muted">Que la imagen que subira acontinuación solo puede ser la institucional</small>
       </h3>
     </div>
-    <div class="col col-lg-2"></div>
-  </div><br>
-  <!-- -->
-</div>
-<div class="container-fluid">
-  <nav>
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <a class="nav-item nav-link active color-nav" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Datos personales</a>
-      <a class="nav-item nav-link color-nav" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Datos de la empresa</a>
-    </div>
-  </nav>
-  <div class="tab-content color-content" id="nav-tabContent">
-    <!-- Inicio del primer contenido-->
-    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-        <form>
-          <div class="form-row">
-              <div class="col col-lg-2">
-                <img class="rounded img-fluid" src="/img/user.png" alt="Registro usuario" /><br>
-                <input type="file">
-              </div><!-- Fin upload foto-->
-                <div class="col">
-                  <div class="form-group">
-                    <label for="nombreUsuario">Nombre completo</label>
-                    <input type="text" class="form-control" id="nombreUsuario" aria-describedby="Nombre" placeholder="Nombre usuario completo" />
-                  </div>
-                </div><!-- Fin formulario -->
-              <div class="col"></div>
+    <div class="col"></div>
+  </div><br />
+  <div class="row align-items-center justify-content-center"></div>
+  <div class="formulario">
+    <form id="form_data">
+      <div class="row align-items-center justify-content-center">
+        <div class="col col-lg-2"></div>
+        <div class="col-md-auto">
+          <img class="rounded img-fluid" src="/img/user.png" alt="Registro usuario" /><br>
+          <input type="file" id="upload_picture" />
+        </div>
+        <div class="col col-lg-2"></div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="nombreUsuario">Nombre completo</label>
+            <input type="text" class="form-control" id="nombreUsuario" aria-describedby="Nombre" placeholder="Nombre usuario completo" />
           </div>
-          <div class="form-row">
-            <div class="col">
-              <div class="form-group">
-                <label for="nEmpleado">N° de empleado</label>
-                <input type="text" class="form-control" id="nEmpleado" aria-describedby="N° Empleado" placeholder="N°" />
-              </div>
-            </div>
-            <div class="col">
-              <div class="form-group">
-                <label for="nacimiento">Fecha de nacimiento</label>
-                <input type="date" class="form-control" id="nacimiento" aria-describedby="Fecha de nacimiento" placeholder="Fecha" />
-              </div>
-            </div>
-            <div class="col">
-              Sexo:
-              <div class="form-group">
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-secondary active">
-                    <input type="radio" name="h" class="form-control" id="hombre" autocomplete="off" checked>Hombre
-                  </label>
-                  <label class="btn btn-secondary">
-                    <input type="radio" name="m" class="form-control" id="mujer" autocomplete="off">Mujer
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="form-group">
-                <label for="direccion">Dirección</label>
-                <input type="text" class="form-control" id="direccion" aria-describedby="Direccion" placeholder="direccion" />
-              </div>
-            </div>
-            <div class="col"></div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="nEmpleado">N° de empleado</label>
+            <input type="text" class="form-control" id="nEmpleado" aria-describedby="N° Empleado" placeholder="N°" />
           </div>
-        </form>
-    </div><!-- Tab pane fade 1-->
-    <!-- FIn DEL PRIMER CONTENIDO-->
-    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="nacimiento">Fecha de nacimiento</label>
+            <input type="date" class="form-control" id="nacimiento" aria-describedby="Fecha de nacimiento" placeholder="Fecha" />
+          </div>
+        </div>
+        <div class="col">
+          Sexo:
+          <div class="form-group">
+            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+              <label class="btn btn-secondary active">
+                <input type="radio" name="h" class="form-control" id="hombre" autocomplete="off" checked>Hombre
+              </label>
+              <label class="btn btn-secondary">
+                <input type="radio" name="m" class="form-control" id="mujer" autocomplete="off">Mujer
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="direccion">Dirección</label>
+            <input type="text" class="form-control" id="direccion" aria-describedby="Direccion" placeholder="direccion" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label form="tel">Telefono</label>
+            <input type="tel" id="tel" class="form-control"  placeholder="Telefono" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="mail">Correo(<small class="text-muted">Solo el de la empresa</small>)</label>
+            <input type="email" class="form-control" id="mail" placeholder="E-mail" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="ext">Extensión telefono</label>
+            <input type="number" id="ext" class="form-control" id="ext" placeholder="Ext." />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="pass">Password</label>
+            <input type="password" id="pass" class="form-control" placeholder="Password" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="passw">Confirmar password</label>
+            <input type="password" id="passw" class="form-control" placeholder="Confirmar" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="puesto">Puesto</label>
+            <select id="puesto" class="form-control">
+              <option value="0">--PUESTO--</option>
+            </select>
+          </div>
+        </div>
+        <div class="col">
+          <div clas="form-group">
+            <label for="escuela">Escolaridad</label>
+            <select id="escuela" class="form-control">
+              <option value="0">Escolaridad</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="rfc">RFC</label>
+            <input type="text" class="form-control" id="rfc" placeholder="RFC"/>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="curp">CURP</label>
+            <input type="text" class="form-control" id="curp" placeholder="CURP" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="typeBlood">Tipo de sangre</label>
+            <select id="typeBlood" class="form-control">
+              <option value="0">--TIPO DE SANGRE--</option>
+            </select>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="imss">N° de IMSS</label>
+            <input type="text" class="form-control" id="imss" placeholder="N° de IMSS" />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <button type="submit" class="btn btn-guardar form-control">Guardar</button>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-cancelar form-control">Cancelar</button>
+        </div>
+        <div class="col"></div>
+      </div>
+    </form>
   </div>
-</div><!-- container del nav-->
+</div><br />
