--- a/application/src/view/templates/template_base.hbs
+++ b/application/src/view/templates/template_base.hbs
@@ -39,10 +39,10 @@
           <div class="col">
             <h5>Redes sociales</h5>
             <ul class="list-inline">
-              <li class="list-inline-item"> <a href="#"> <img alt="Hola" class="img-fluid" src="/img/facebook.png"></a> </li>
+              <li class="list-inline-item"> <a href="https://www.facebook.com/FerreteriaINDAR/"> <img alt="Hola" class="img-fluid" src="/img/facebook.png"></a> </li>
               <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/instagram.png"> </a> </li>
-              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/youtube.png"> </a> </li>
-              <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/linkedin.png"> </a> </li>
+              <li class="list-inline-item"> <a href="https://www.youtube.com/user/IndarBodegaFerretera "> <img class="img-fluid" src="/img/youtube.png"> </a> </li>
+              <li class="list-inline-item"> <a href="https://www.linkedin.com/company/indar-tu-bodega-ferretera/"> <img class="img-fluid" src="/img/linkedin.png"> </a> </li>
               <li class="list-inline-item"> <a href="#"> <img class="img-fluid" src="/img/twitter.png"> </a> </li>
             </ul>
           </div>
