--- a/application/src/index.hbs
+++ b/application/src/index.hbs
@@ -24,7 +24,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Intranet</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Login</h6>
-                    <form>
+                    <form method="POST" action="/login">
                       <div class="form-group">
                         <label for="user"><span class="oi oi-person" id="basico"></span>&nbsp;Usuario</label>
                         <input type="text" class="form-control" id="user" name="user" aria-describedby="emailHelp" placeholder="Correo" />
@@ -32,7 +32,7 @@
                       </div>
                       <div class="form-group">
                         <label for="pass"><span class="oi oi-lock-locked"></span>&nbsp;Contraseña</label>
-                        <input type="password" class="form-control" id="pass" placeholder="Contraseña" />
+                        <input type="password" class="form-control" id="pass" name="pass" placeholder="Contraseña" />
                       </div>
                       <div class="form-group centrando">
                         <button type="submit" class="btn btn-primary">Entrar</button>
