--- a/application/src/view/templates/panel.hbs
+++ b/application/src/view/templates/panel.hbs
@@ -65,6 +65,7 @@
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Hola" class="img-fluid rounded-circle" src="{{obj.mini}}"></a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="#">Datos generales</a>
+                  <a class="dropdown-item" href="#">Directorio</a>
                   <a class="dropdown-item" href="#">Cerrar sesion</a>
                 </div>
               </li>
