--- a/application/src/view/templates/panel.hbs
+++ b/application/src/view/templates/panel.hbs
@@ -103,7 +103,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Hola" class="img-fluid rounded-circle" src="{{logueado.mini}}"><span class="sr-only">(current)</span></a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Datos generales</a>
+                  <a class="dropdown-item" href="#">Cuenta</a>
                   <a class="dropdown-item" href="#">Directorio</a>
                   <a class="dropdown-item" href="/adiosVaquero">Cerrar sesion</a>
                 </div>
